# 2DRaytracer

./: CMakeLists.txt  Camera.h  IntersectResult.h  Line.h  Object.h  README.md  Ray.h  Scene.h  Vec2.h  main.cpp
